# strudeleeg

./: .gitignore  COMPATIBILITY.md  Package.swift  README.md  devstrudeleeg.md  fixes.md  functionalityv1.1.md  functionalityv1.2.md  functionalityv1.3.md  newchanges.md
MiniEngine/: Package.swift
MiniEngine/Sources/MiniEngine/: Chords.swift  CodeParser.swift  ControlPattern.swift  EuclidPattern.swift  Hap.swift  MiniEngine.swift  MiniNotationCore.swift  P2Patterns.swift  Pattern.swift  PatternAlgebra.swift  PatternScheduler.swift  PatternValidator.swift  Rational.swift  SampleBankManager.swift  ScheduledEvent.swift  Signal.swift  SongStructure.swift  SoundfontManager.swift  SynthVoice.swift  TimeSpan.swift
MiniEngine/Tests/MiniEngineTests/: BugFixTests.swift  ChordsTests.swift  DebugTests.swift  LiveEngineTests.swift  MiniNotationTests.swift  OracleTests.swift  P03P04Tests.swift  P1Tests.swift  P2Tests.swift  P3Tests.swift  PatternTests.swift  RationalTests.swift  RemoteBankLiveTests.swift  SampleBankTests.swift  SignalTests.swift  SongStructureTests.swift  SoundfontTests.swift  Tier1Tests.swift  Tier2Tests.swift  Tier3Tests.swift  Tier4Tests.swift  Tier5Tests.swift  ValidatorTests.swift
MiniEngine/Tests/MiniEngineTests/Fixtures/: oracle_fixtures.json
Sources/AudioValidate/: main.swift
Sources/DemoStrudelApp/: AppBundle.swift  AudioDemoEngine.swift  ContentView.swift  DemoStrudelApp.swift  EngineAdapter.swift  JuceEngine.swift  JucePatternScheduler.swift  Presets.swift  StrudelWebEngine.swift
Sources/DemoStrudelApp/StrudelWeb/: index.html  strudel-bundle.js
Sources/JuceProbe/: main.swift
Sources/NativeEngine/: MiniNotationParser.swift  NativeEngine.swift  Scheduler.swift
Sources/ValidateEvents/: main.swift
Sources/VolumeCalibrate/: Samples  main.swift
Sources/WebProbe/: main.swift
StrudelJuce/: .gitignore  CMakeLists.txt  README.md
StrudelJuce/include/: StrudelJuceCAPI.h
StrudelJuce/scripts/: build_macos.sh
StrudelJuce/src/: StrudelDSP.h  StrudelEngine.cpp  StrudelEngine.h  StrudelJuceCAPI.cpp  StrudelNote.h  StrudelOrbit.h  StrudelSample.cpp  StrudelSample.h  StrudelVoice.cpp  StrudelVoice.h
oracle/: generate.mjs
scripts/: build_app.sh  entitlements.plist  fetch_soundfonts.sh  generate_samples.py  make_dmg.sh  notarize.sh
task/: juce-engine.md  tasks.md  v1.3-implementation.md
web/: build.mjs  entry.mjs  package-lock.json  package.json
